--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.login-page {
+  background-image: url('welcomescreen.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .login-container {
   display: flex;
   justify-content: center;
@@ -101,4 +108,11 @@
 
 .upload-section button:active {
   background-color: #0056b3;
+}
+
+.bgimg {
+  background-image: url('welcomescreen.jpg');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
 }
